# ttl-pref-ls

./: .gitignore  LICENSE  README.md  pyproject.toml
samples/: emmo.ttl  foaf.ttl
tests/: test_resolver.py
ttl_pref_ls/: indexer.py  resolver.py  server.py
